Make the build runnable and testable on JDK7/JDK9
Signed-off-by:Lukas Jungmann <lukas.jungmann@oracle.com>

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@
 /jaxb-ri/external/target/
 /jaxb-ri/tools/osgi_tests/target/
 /jaxb-ri/xsom/target/
+/jaxb-ri/jaxb-xjc-jdk9/target/
+/jaxb-ri/jaxb-jxc-jdk9/target/
