--- a/jaxb-ri/jaxb-jxc-jdk9/pom.xml
+++ b/jaxb-ri/jaxb-jxc-jdk9/pom.xml
@@ -3,7 +3,7 @@
 
 DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 
-Copyright (c) 2016 Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2016-2017 Oracle and/or its affiliates. All rights reserved.
 
 The contents of this file are subject to the terms of either the GNU
 General Public License Version 2 only ("GPL") or the Common Development
@@ -47,6 +47,7 @@ holder.
         <groupId>com.sun.xml.bind.mvn</groupId>
         <artifactId>jaxb-parent</artifactId>
         <version>2.3.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -60,25 +61,6 @@ holder.
             <artifactId>jaxb-jxc</artifactId>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.3</version>
-                <executions>
-                    <execution>
-                        <id>no-endorsed-dirs</id>
-                    </execution>
-                </executions>
-                <configuration combine.self="override">
-                    <source>1.9</source>
-                    <target>1.9</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
 
