fix javadoc build (and errors)
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>

--- a/jaxb-ri/bundles/core/pom.xml
+++ b/jaxb-ri/bundles/core/pom.xml
@@ -84,6 +84,26 @@ holder.
 
     <profiles>
         <profile>
+            <id>jdk9-setup</id>
+            <activation>
+                <jdk>9</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <configuration>
+                            <additionalJOptions>
+                                <additionalJOption>--add-modules</additionalJOption>
+                                <additionalJOption>java.activation</additionalJOption>
+                            </additionalJOptions>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>default-profile</id>
             <activation>
                 <property>
